--- a/site/themes/hugo-theme-slim/layouts/partials/head.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/head.html
@@ -21,7 +21,7 @@
     //PushBots ApplicationId (required)
     PB.app_id = "5c0fdfe00540a35b5679b417";
     //Your domain name, must be HTTPS or localhost  (required)
-    PB.domain = "https://blog.clearip.io";
+    PB.domain = "https://blog.currencystack.io";
     //Update and uncomment it if you are using custom safari certificate for your app
     //PB.safari_push_id = "web.com.pushbots.main";
     //****************************************
