--- a/site/themes/hugo-theme-slim/layouts/partials/header.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/header.html
@@ -1,7 +1,8 @@
 <div class="header">
-  <h1 class="site-title"><a href="{{ .Site.BaseURL }}"><h1 class="title">
+    <svg  style="float:left; margin-right:10px; display:inline-block" width="40px" height="40px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g id="facebook_profile_image" fill="#0818F9" fill-rule="nonzero"><g id="Group" transform="translate(20.000000, 20.000000) scale(-1, 1) rotate(-180.000000) translate(-20.000000, -20.000000) "><path d="M0,20 L0,0 L20,0 L40,0 L40,20 L40,40 L20,40 L0,40 L0,20 Z M23.76,30.4333333 C25.8666667,30.2133333 28.14,29.3133333 29.3933333,28.2066667 L29.7533333,27.8933333 L28.2066667,25.78 C27.3533333,24.62 26.64,23.6666667 26.62,23.6666667 C26.6066667,23.6666667 26.4666667,23.7533333 26.3133333,23.86 C24.48,25.1133333 21.7733333,25.36 20,24.4266667 C18.86,23.8333333 18.0333333,22.8 17.7,21.5666667 C17.5466667,21 17.5,19.8066667 17.5933333,19.1333333 C17.8866667,17.1333333 19.1533333,15.7133333 21.0533333,15.26 C21.8333333,15.0733333 23.3533333,15.1066667 24.1666667,15.3266667 C24.8133333,15.5066667 25.8933333,15.9733333 26.6866667,16.42 C27.1866667,16.7066667 27.2866667,16.74 27.3666667,16.66 C27.4933333,16.5266667 30,12.5333333 30,12.4666667 C30,12.3933333 29.0533333,11.7133333 28.5,11.3866667 C26.38,10.1266667 23.52,9.46666667 20.8133333,9.61333333 C18.52,9.73333333 16.5066667,10.3666667 14.7333333,11.52 C13.9666667,12.02 12.68,13.3133333 12.1666667,14.1 C11.38,15.3066667 10.8666667,16.64 10.6266667,18.1066667 C10.48,18.98 10.46,20.8866667 10.5933333,21.7 C11.0466667,24.6133333 12.7866667,27.1866667 15.3466667,28.72 C17.7133333,30.1466667 20.7066667,30.7533333 23.76,30.4333333 Z" id="Shape"></path></g></g></g></svg>
+  <h1 class="site-title" ><a href="{{ .Site.BaseURL }}"><h1 class="title" style="padding-left:14px;">
     
-    <svg width="20" aria-hidden="true" data-prefix="fas" data-icon="map-marker-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="svg-inline--fa fa-map-marker-alt fa-w-12"><path fill="currentColor" d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z" class=""></path></svg>
+    
     {{ .Site.Title }} <span class="grey" style="color:#c7cfe2;" >blog</span></h1>
    </a></h1>
   <p class="site-tagline">{{ .Site.Params.Subtitle }}</p>
@@ -42,8 +43,12 @@
     font-family:Slate;
 
   }
+
+  .title{
+  }
+  
 h1,.post-title a,h2, a{
-  color:#6D6AE3;
+  color:#001AF9;
       font-family: Slate For OnePlus!important;
 
 }
