--- a/site/themes/hugo-theme-slim/layouts/partials/header.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/header.html
@@ -94,7 +94,30 @@ p, ul, li{
   border-radius: 50%;
 
 
+}
 
+
+@media only screen and (max-width: 600px) {
+  body {
+    padding:12px;
+    margin-top:-20px;
+    overflow-x: hidden;
+  }
+  .post-title a,h2, a{
+ font-size:1.6rem;
+ line-height:2rem;
+ padding-bottom:1.4rem;
+
+}
+
+.site-title h1{
+  font-size:1.4rem!important;
+}
+
+svg{
+  width:26px;
+  margin-top:-5px;
+}
 }
 
 </style>
