button in header

--- a/site/themes/hugo-theme-slim/layouts/partials/header.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/header.html
@@ -5,6 +5,7 @@
     
     {{ .Site.Title }} <span class="grey" style="color:#c7cfe2;" >blog</span></h1>
    </a></h1>
+   <a class="btn next " style="float:right; margin-top:-50px;" href="https://currencystack.io/register?ref=blog"> Try free</a> 
   <p class="site-tagline">{{ .Site.Params.Subtitle }}</p>
   <!-- <div class="nav">
     <a class="nav-btn" href="#">
