--- a/site/themes/hugo-theme-slim/layouts/partials/header.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/header.html
@@ -51,7 +51,8 @@
 h1,.post-title a,h2, a{
   color:#001AF9;
       font-family: Slate For OnePlus!important;
-
+line-height:2.2rem;
+padding-bottom:10px;
 }
 
 a:hover{
