--- a/site/themes/hugo-theme-slim/layouts/partials/addthis.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/addthis.html
@@ -1,1 +1,40 @@
-<div class="addthis_inline_share_toolbox"></div>
+<div class='share-button-container'>
+    <p>Like it? Share it!</p>
+
+    <div class="socialbutton-wrapper">
+        <a href="//twitter.com/share?url={{ .Permalink }}&amp;text={{ .Title }}&amp;via={{ .Site.Social.twitter }}" target="_blank" class="share-btn twitter">
+
+            <div class="socialbutton twitter" data-share-url="http://www.savjee.be">
+                <p class="icon">
+                    <img src="/img/icon-twitter.png">
+                </p>
+
+                <p class="shares">0</p>
+            </div>
+        </a>
+
+
+        <a href="//www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" target="_blank" class="share-btn facebook">
+            <div class="socialbutton facebook" data-share-url="{{ .Permalink }}">
+                <p class="icon">
+                    <img src="/img/icon-facebook.png">
+                </p>
+
+                <p class="shares">0</p>
+            </div>
+        </a>
+
+
+        <!-- <a href="http://www.reddit.com/submit?url=http://www.savjee.be">
+            <div class="socialbutton reddit">
+                <p class="icon">
+                    <img src="/img/icon-reddit.png">
+                </p>
+
+                <p class="shares">0</p>
+            </div>
+        </a> -->
+    </div>
+</div>
+
+<script type='text/javascript' src='/js/social.js'></script>
