--- a/site/themes/hugo-theme-slim/layouts/post/single.html
+++ b/site/themes/hugo-theme-slim/layouts/post/single.html
@@ -3,13 +3,13 @@
 
 <head>
   {{ partial "head.html" . }}
+  <link rel="stylesheet" type="text/css" href="/css/social.css">
+
 </head>
 
 <body>
   <div class="container">
     {{ partial "header.html" . }}
-    {{ partial "addthis" . }}
-
     <div class="content">
       <div class="posts">
         <div class="post">
@@ -24,6 +24,8 @@
             {{ .Content }}
           </div>
         </div>
+        {{ partial "addthis" . }}
+
         <div class="pagination">{{ if .Prev }}
           <a class="btn previous " href="{{.Prev.Permalink}}"> Prev</a> {{ end }} {{ if .Next }}
           <a class="btn next " href="{{.Next.Permalink}}"> Next</a> {{ end }}
@@ -58,7 +60,6 @@
    document.getElementById("readTime").innerHTML = timeInt;
   </script>
   {{ with .Site.Params.AnalyticsID }}{{ partial "analytics.html" . }}{{ end }}
-  {{ partial "addthis-script" . }}
 
 </body>
 
