--- a/site/themes/hugo-theme-slim/layouts/post/single.html
+++ b/site/themes/hugo-theme-slim/layouts/post/single.html
@@ -4,7 +4,13 @@
 <head>
   {{ partial "head.html" . }}
   <link rel="stylesheet" type="text/css" href="/css/social.css">
-
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@currencystack.io">
+  <meta name="twitter:creator" content="@currencystackio">
+  <meta name="twitter:title" content="{{ .Title }}">
+  <meta name="twitter:description" content=' {{ $.Param "description" }}'>
+  <meta name="twitter:image" content="https://currencystack.io/images/twitter_header_photo_2.png">
+  
 </head>
 
 <body>
