--- a/site/themes/hugo-theme-slim/layouts/post/single.html
+++ b/site/themes/hugo-theme-slim/layouts/post/single.html
@@ -9,7 +9,7 @@
   <meta name="twitter:creator" content="@currencystackio">
   <meta name="twitter:title" content="{{ .Title }}">
   <meta name="twitter:description" content=' {{ $.Param "description" }}'>
-  <meta name="twitter:image" content="https://currencystack.io/images/twitter_header_photo_2.png">
+  <meta name="twitter:image" content='https://currencystack.io/{{ $.Param "image" }}'>
   
 </head>
 
