--- a/site/themes/hugo-theme-slim/layouts/post/single.html
+++ b/site/themes/hugo-theme-slim/layouts/post/single.html
@@ -10,7 +10,13 @@
   <meta name="twitter:title" content="{{ .Title }}">
   <meta name="twitter:description" content=' {{ $.Param "description" }}'>
   <meta name="twitter:image" content='https://blog.currencystack.io{{ $.Param "image" }}'>
-  
+  <meta property="og:type" content="article">
+<meta property="og:title" content="{{ .Title }}">
+<meta property="og:description" content='{{ $.Param "description" }}'>
+<meta property="og:url" content="{{ .Permalink }}">
+<meta property="og:image" content='https://blog.currencystack.io{{ $.Param "image" }}'>
+<meta property="fb:app_id" content="255633811994517">
+
 </head>
 
 <body>
