--- a/site/themes/hugo-theme-slim/layouts/post/single.html
+++ b/site/themes/hugo-theme-slim/layouts/post/single.html
@@ -66,6 +66,16 @@
   </div>
   <script src="{{ .Site.BaseURL }}js/slim.js"></script>
   <script src="{{ .Site.BaseURL }}js/highlight.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-51748123-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-51748123-5');
+</script>
+
   <script>
     hljs.initHighlightingOnLoad();
     var totalWords = document.getElementById('postData').innerHTML.split(' ').length;
