--- a/site/themes/hugo-theme-slim/layouts/partials/head.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/head.html
@@ -62,3 +62,11 @@
     </script>
     
     <script src="//cdn.pushbots.com/js/sdk.min.js" type="text/javascript" onload="PB.init()" async></script>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-51748123-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-51748123-5');
+</script>
