--- a/site/themes/hugo-theme-slim/layouts/partials/footer.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <p style="color:#E0E0E0;">PushBots Inc 2018</p>
+  <p style="color:#E0E0E0;"><a href="https://currencystack.io">currencystack.io </a> is powered by <a href="https://pushbots.com">PushBots Inc </a>2018</p>
 </div>
