--- a/site/themes/hugo-theme-slim/layouts/partials/header.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/header.html
@@ -115,6 +115,9 @@ p, ul, li{
 
 
 @media only screen and (max-width: 600px) {
+  .footer a{ 
+    font-size:0.9rem!important;
+  }
   .hide{
     display:none;
   }
