modify pushbots appID

--- a/site/themes/hugo-theme-slim/layouts/partials/head.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/head.html
@@ -45,7 +45,7 @@
     //****************************************
     
     PB.logging_enabled = true;
-    PB.auto_subscribe = false;
+    PB.auto_subscribe = true;
     
     //Custom worker and manifest URL
     //PB.worker_url = PB.domain + "/pushbots-worker.js";
