--- a/site/themes/casper-two/layouts/partials/header-sori.html
+++ b/site/themes/casper-two/layouts/partials/header-sori.html
@@ -20,12 +20,13 @@
   color: white;
 }
 
+
 </style><header class="site-header outer">
   <div class="inner">
     <nav class="site-nav">
       <div class="site-nav-left">
 <a href="/">
-          <h5 class="title" style="font-size:2rem!important; margin-top:0.9rem; width:400px">
+          <h5 class="title" style=" margin-top:0.9rem; width:400px">
     
               <svg width="15px" fill="#0018f9" height="40px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g id="facebook_profile_image" fill="white" fill-rule="nonzero">
