--- a/site/themes/casper-two/layouts/partials/header.html
+++ b/site/themes/casper-two/layouts/partials/header.html
@@ -1,10 +1,11 @@
+
 <header class="site-header outer " {{if .Site.Params.cover}} style="background-image: url({{.Site.Params.cover | absURL}})" {{end}} >
   <div class="inner">
     <div class="site-header-content">
       <!-- <h1 class="site-title">{{ if .Site.Params.logo }}
         <img class="site-logo" src="{{ .Site.Params.logo  | absURL}}" alt="{{ .Site.Params.title }}" />
       {{else}} {{ .Site.Params.title }} {{end}} </h1> -->
-      <h1 class="title" style="font-size:5rem!important; margin-top:0.9rem; color:white!important;       ">
+      <h1 class="title" style="margin-top:0.9rem; color:white!important;       ">
     
         <svg width="40px" height="40px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g id="facebook_profile_image" fill="white" fill-rule="nonzero"><g id="Group" transform="translate(20.000000, 20.000000) scale(-1, 1) rotate(-180.000000) translate(-20.000000, -20.000000) "><path d="M0,20 L0,0 L20,0 L40,0 L40,20 L40,40 L20,40 L0,40 L0,20 Z M23.76,30.4333333 C25.8666667,30.2133333 28.14,29.3133333 29.3933333,28.2066667 L29.7533333,27.8933333 L28.2066667,25.78 C27.3533333,24.62 26.64,23.6666667 26.62,23.6666667 C26.6066667,23.6666667 26.4666667,23.7533333 26.3133333,23.86 C24.48,25.1133333 21.7733333,25.36 20,24.4266667 C18.86,23.8333333 18.0333333,22.8 17.7,21.5666667 C17.5466667,21 17.5,19.8066667 17.5933333,19.1333333 C17.8866667,17.1333333 19.1533333,15.7133333 21.0533333,15.26 C21.8333333,15.0733333 23.3533333,15.1066667 24.1666667,15.3266667 C24.8133333,15.5066667 25.8933333,15.9733333 26.6866667,16.42 C27.1866667,16.7066667 27.2866667,16.74 27.3666667,16.66 C27.4933333,16.5266667 30,12.5333333 30,12.4666667 C30,12.3933333 29.0533333,11.7133333 28.5,11.3866667 C26.38,10.1266667 23.52,9.46666667 20.8133333,9.61333333 C18.52,9.73333333 16.5066667,10.3666667 14.7333333,11.52 C13.9666667,12.02 12.68,13.3133333 12.1666667,14.1 C11.38,15.3066667 10.8666667,16.64 10.6266667,18.1066667 C10.48,18.98 10.46,20.8866667 10.5933333,21.7 C11.0466667,24.6133333 12.7866667,27.1866667 15.3466667,28.72 C17.7133333,30.1466667 20.7066667,30.7533333 23.76,30.4333333 Z" id="Shape"></path></g></g></g></svg>        currencystack.io <span class="grey" style="color:#c7cfe2;">blog</span></h1>
 
