--- a/site/themes/casper-two/layouts/partials/head.html
+++ b/site/themes/casper-two/layouts/partials/head.html
@@ -28,4 +28,32 @@
 
     {{ if .Site.Params.RSSLink}}<link href="{{.Site.Params.RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" /> {{else}}{{ if eq .URL "/" }}<link href="{{ "index.xml" | absURL}}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" /> {{ end }} {{ end }}
 
+    <script>
+        //some default pre init
+        var PB = PB || {};PB.q = PB.q || [];PB.events = PB.events || [];
+        
+        //********** Update these fields ********
+        //PushBots ApplicationId (required)
+        PB.app_id = "5c1e7ae20540a31e2b4ded22";
+        //Your domain name, must be HTTPS or localhost  (required)
+        PB.domain = "https://blog.currencystack.io";
+        //Update and uncomment it if you are using custom safari certificate for your app
+        //PB.safari_push_id = "web.com.pushbots.main";
+        //****************************************
+        
+        PB.logging_enabled = true;
+        PB.auto_subscribe = true;
+        
+        //Custom worker and manifest URL
+        //PB.worker_url = PB.domain + "/pushbots-worker.js";
+        //PB.manifest_url = PB.domain + "/pushbots-push-manifest.json";
+        
+        //Welcome notification message
+        PB.welcome = {title:"Welcome ",message:"Thanks for subscribing!", url :PB.domain};
+
+        </script>
+        
+        <script src="//cdn.pushbots.com/js/sdk.min.js" type="text/javascript" onload="PB.init()" async></script>
+ 
+        
 </head>
