--- a/site/themes/hugo-theme-slim/layouts/partials/header.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/header.html
@@ -5,7 +5,7 @@
     
     {{ .Site.Title }} <span class="grey" style="color:#c7cfe2;" >blog</span></h1>
    </a></h1>
-   <a class="btn next hide" style="float:right; margin-top:-80px; font-size:0.8rem;" href="https://currencystack.io/register?ref=blog"> Try for free</a> 
+   <a class="btn next hide" style="float:right; margin-top:-80px; font-size:0.8rem;" href="https://app.currencystack.io/register?ref=blog"> Try for free</a> 
   <p class="site-tagline">{{ .Site.Params.Subtitle }}</p>
   <!-- <div class="nav">
     <a class="nav-btn" href="#">
