--- a/site/themes/hugo-theme-slim/layouts/partials/head.html
+++ b/site/themes/hugo-theme-slim/layouts/partials/head.html
@@ -27,6 +27,11 @@
 <meta name="msapplication-square150x150logo" content="/mstile-150x150.png" />
 <meta name="msapplication-wide310x150logo" content="/mstile-310x150.png" />
 <meta name="msapplication-square310x310logo" content="/mstile-310x310.png" />
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@getcurrencystackio">
+<meta name="twitter:title" content="Parade of Fans for Houston’s Funeral">
+<meta name="twitter:description" content="">
+<meta name="twitter:image" content="http://graphics8.nytimes.com/images/2012/02/19/us/19whitney-span/19whitney-span-articleLarge.jpg">
 
 <!-- RSS -->
 <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
