--- a/site/themes/casper-two/layouts/partials/meta-twitter.html
+++ b/site/themes/casper-two/layouts/partials/meta-twitter.html
@@ -7,7 +7,7 @@
     {{ end }}
 {{ else }}
     <meta name="twitter:card" content="summary"/>
-    {{ with .Site.Params.cover }}<meta name="twitter:image" content="{{ . | absURL }}"/>{{ end }}
+    {{ with .Site.Params.cover }}<meta name="twitter:image" content="https://blog.currencystack.io{{ . | absURL }}"/>{{ end }}
 {{ end }} <!-- Twitter Card data -->
     <meta name="twitter:title" content="{{ .Title }}"/>
     <meta name="twitter:description" content="{{if .IsPage}}{{ .Description | default (substr .Summary 0 160) }}{{ else }}{{ .Site.Params.description }}{{ end }}"/>
