--- a/site/themes/casper-two/layouts/partials/meta-twitter.html
+++ b/site/themes/casper-two/layouts/partials/meta-twitter.html
@@ -1,7 +1,7 @@
 {{ if .IsPage }} <!-- Credit V JEANTET -->
     {{ with .Params.image }}
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:image" content="{{ .  | absURL }}"/>
+    <meta name="twitter:image" content="https://blog.currencystack.io{{ .  | absURL }}"/>
     {{ else }}
     <meta name="twitter:card" content="summary"/>
     {{ end }}
@@ -11,5 +11,5 @@
 {{ end }} <!-- Twitter Card data -->
     <meta name="twitter:title" content="{{ .Title }}"/>
     <meta name="twitter:description" content="{{if .IsPage}}{{ .Description | default (substr .Summary 0 160) }}{{ else }}{{ .Site.Params.description }}{{ end }}"/>
-    <meta name="twitter:url" content="{{.URL | absURL}}" />
+    <meta name="twitter:url" content="https://blog.currencystack.io{{.URL | absURL}}" />
     <meta name="twitter:site" content="@{{ .Site.Params.twitterName }}"/>
