--- a/site/themes/casper-two/layouts/partials/meta-facebook.html
+++ b/site/themes/casper-two/layouts/partials/meta-facebook.html
@@ -1,6 +1,6 @@
 <meta property="og:site_name" content="{{ .Site.Title }}" />
     <meta property="og:title" content="{{ if ne .URL "/" }}{{ .Title }} &middot; {{ end }}{{ .Site.Params.Title }}" />
-    <meta property="og:url" content="{{ .Permalink }}" />
+    <meta property="og:url" content="https://blog.currencystack.io{{ .Permalink }}" />
     {{if .Site.Params.fbName}}<meta property="article:publisher" content="https://www.facebook.com/{{.Site.Params.fbName}}" />{{end}}
 {{ if .IsPage }}
     <meta property="og:type" content="article" />
@@ -12,6 +12,6 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="{{ .Site.Params.description }}" />
 {{ end }}{{if .Params.image }}
-    <meta property="og:image" content="{{ .Params.image | absURL}}"/>
+    <meta property="og:image" content="https://blog.currencystack.io{{ .Params.image | absURL}}"/>
 {{else}}{{if .Site.Params.cover}}
-    <meta property="og:image" content="{{ .Site.Params.cover | absURL}}"/>{{end}}{{end}}
+    <meta property="og:image" content="https://blog.currencystack.io{{ .Site.Params.cover | absURL}}"/>{{end}}{{end}}
